<resources>
    <string name="app_name">GO SOPT Android</string>
    <string name="hw">Hello World!</string>
    <string name="gd">Good!</string>
    <string name="wc"><b>Welcome to GO Android !</b></string>
    <string name="id"><b>ID</b></string>
    <string name="pw"><b>PW</b></string>
    <string name="signup">SIGN UP</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="login">LOGIN</string>
    <string name="putpassword">비밀번호를 입력하세요.</string>
    <string name="putid">아이디를 입력하세요.</string>
    <string name="putname">이름을 입력하세요</string>
    <string name="putspecial">특기를 입력하세요.</string>
    <string name="special"><b>특기</b></string>
    <string name="name"><b>이름</b></string>
    <string name="complete">완료</string>
    <string name="welcome">WELCOME !!</string>
</resources>