<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".login.LoginActivity">

    <TextView
        android:id="@+id/tv_loginpage_head"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/welcome"
        android:textColor="@color/black"
        android:textSize="20dp"
        android:layout_marginTop="50dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
    <TextView
        android:id="@+id/tv_loginpage_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/id"
        android:textSize="20dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="50dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_loginpage_head"
        />
    <EditText
        android:id="@+id/et_loginpage_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/putid"
        android:layout_marginHorizontal="30dp"
        app:layout_constraintTop_toBottomOf="@id/tv_loginpage_login"/>
    <TextView
        android:id="@+id/tv_loginpage_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pw"
        android:textSize="20dp"
        android:layout_marginTop="50dp"
        android:layout_marginStart="30dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/et_loginpage_login"/>
    <EditText
        android:id="@+id/et_loginpage_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/putpassword"
        android:inputType="textPassword"
        android:layout_marginHorizontal="30dp"
        app:layout_constraintTop_toBottomOf="@id/tv_loginpage_password"/>
    <Button
        android:id="@+id/btn_loginpage_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:layout_marginHorizontal="30dp"
        app:layout_constraintBottom_toTopOf="@id/btn_loginpage_signup"/>
    <Button
        android:id="@+id/btn_loginpage_signup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/signup"
        android:layout_marginHorizontal="30dp"
app:layout_constraintTop_toBottomOf="@id/et_loginpage_password"
        app:layout_constraintBottom_toBottomOf="parent"/>
"/>



</androidx.constraintlayout.widget.ConstraintLayout>